<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context="com.example.ftpclientandroid.FileList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            style="@style/BaseImageButton"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_public_back" />

        <TextView
            android:id="@+id/titleBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ftp_servers"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/file_add"
            style="@style/BaseImageButton"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/add_server"
            android:src="@drawable/ic_public_add" />

        <ImageButton
            android:id="@+id/search"
            style="@style/BaseImageButton"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_public_search" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="80"
        android:contentDescription="@string/file_list">

        <LinearLayout
            android:id="@+id/filelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/dock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/dock_download"
            style="@style/BaseImageButton"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/download_file"
            android:src="@drawable/ic_public_download" />

        <ImageButton
            android:id="@+id/dock_copy"
            style="@style/BaseImageButton"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/copy_file"
            android:src="@drawable/ic_public_copy" />

        <ImageButton
            android:id="@+id/dock_move"
            style="@style/BaseImageButton"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/move_file"
            android:src="@drawable/ic_public_move" />

        <ImageButton
            android:id="@+id/dock_delete"
            style="@style/BaseImageButton"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/delete_file"
            android:src="@drawable/ic_public_delete" />
    </LinearLayout>
</LinearLayout>