<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context="com.kyang.ftpclient.activities.FileList">

    <LinearLayout
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_public_back" />

        <TextView
            android:id="@+id/title"
            style="@style/TitleTextView"
            android:text="@string/app_name" />

        <ImageButton
            android:id="@+id/file_add"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/add_server"
            android:src="@drawable/ic_public_upload" />

        <ImageButton
            android:id="@+id/search"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_public_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/search_back"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_public_back" />

        <EditText
            android:id="@+id/search_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:autofillHints="search"
            android:hint="@string/search"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/search_ok"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_public_search" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="86"
        android:contentDescription="@string/file_list">

        <LinearLayout
            android:id="@+id/filelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/dock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/dock_download"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/download_file"
            android:src="@drawable/ic_public_download" />

        <ImageButton
            android:id="@+id/dock_move"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/move_file"
            android:src="@drawable/ic_public_move" />

        <ImageButton
            android:id="@+id/dock_delete"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/delete_file"
            android:src="@drawable/ic_public_delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_dock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/confirm_cancel"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_public_back" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <ImageButton
            android:id="@+id/confirm_ok"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/confirm"
            android:src="@drawable/ic_public_ok" />
    </LinearLayout>
</LinearLayout>