<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.kyang.ftpclient.activities.SearchFTP">

    <LinearLayout
        android:id="@+id/titleBar"
        style="@style/TitleBarLayout"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/scrollView">

        <ImageButton
            android:id="@+id/search_back"
            style="@style/BaseImageButton"
            android:background="@color/white"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_public_back" />

        <TextView
            style="@style/TitleTextView"
            android:text="@string/search_ftp_page" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBar">

        <LinearLayout
            android:id="@+id/server_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/BaseTextView"
                android:layout_margin="10dp"
                android:background="@color/grey"
                android:text="@string/ftp_servers" />

            <TextView
                android:id="@+id/alertMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/alertMessage"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>