<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/grey"
    tools:context="com.example.ftpclientandroid.MainActivity">

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="8" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey"
        android:contentDescription="@string/add_server"
        app:layout_constraintBottom_toTopOf="@+id/dock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar"
        app:layout_constraintVertical_weight="82">

        <LinearLayout
            android:id="@+id/FTPlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/BaseTextView"
                android:layout_margin="10dp"
                android:background="@color/grey"
                android:text="@string/ftp_servers" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/dock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_weight="10">

        <ImageButton
            android:id="@+id/editFtp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start|center_vertical"
            android:background="@color/white"
            android:contentDescription="@string/edit_server"
            android:src="@drawable/ic_public_edit" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/addFtp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center|end"
            android:background="@color/white"
            android:contentDescription="@string/add_server"
            android:src="@drawable/ic_public_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editdock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_weight="10">

        <ImageButton
            android:id="@+id/editBack"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="start|center_vertical"
            android:background="@color/white"
            android:contentDescription="@string/edit_server"
            android:src="@drawable/ic_public_back" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/editPass"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="center|end"
            android:background="@color/white"
            android:contentDescription="@string/add_server"
            android:src="@drawable/ic_public_ok" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>